log
Thu 25 Apr 2024 03:21:49 PM UTC: 
 tests:  0|6
total_score: 0/70
482f3d3
Thu 25 Apr 2024 03:28:07 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3acc79f
Thu 25 Apr 2024 03:30:48 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
6252c03
Thu 25 Apr 2024 03:32:06 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
b4ff6ab
Thu 25 Apr 2024 03:33:18 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
41f5ccc
Thu 25 Apr 2024 03:34:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:28: error: too few arguments to function ‘calloc’
   56 |   mapa->buckets = (Pair**) calloc(capacity * sizeof(Pair*));
      |                            ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
1c5bb0e
Thu 25 Apr 2024 03:35:07 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:29: error: too few arguments to function ‘calloc’
   56 |   mapa->buckets = (Pair**) *calloc(capacity * sizeof(Pair*));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
213873c
Thu 25 Apr 2024 03:36:44 PM UTC: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
72d5ac2
